--- a/lab1/home-assignment/lab1-home.ipynb
+++ b/lab1/home-assignment/lab1-home.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "---\n",
     "\n",
-    "In the first code cell below we import some data to work with. You don't need to worry about this code cell too much, but here is what it does in a nutshell: **from** tells us from which package we want to get data. We have installed the *nltk* package for you in the background so just take its existence for granted. After **import** we list what pieces of data we want to import, and because the data have non-descriptive names (text1, text2), we also rename them using the **as** keyword. \n",
+    "In the first code cell below we import some data to work with. You don't need to worry about this code cell too much, but here is what it does in a nutshell: **from** tells us from which package we want to get data. We have installed the *nltk* package for you in the background so just take its existence for granted. After **import** we list which pieces of data we want to import, and because the data have non-descriptive names (text1, text2), we also rename them using the **as** keyword. \n",
     "\n",
     "The two texts we import are Herman Melville's *Moby Dick* and Jane Austen's *Sense and Sensibility*. As a result of the importing we have for our use two lists containing the word tokens of the texts. These lists are contained in the variables '`moby_dick`' and '`sense_and_sensibility`'. In the second code cell below we print out the first few of the texts to make sure we got the right data. \n",
     "\n",
@@ -219,7 +219,7 @@
     "\n",
     "### Ex 1.4\n",
     "\n",
-    "Now that you are well on our way to building our own Python toolkit for text processing, let's stop for a second and explore one problem with the frequency function. Test the function `frequency_of()` on a few words where you only change capitalization, for example \"the\" and \"The\". What's the problem with the approach? Include the answer as comments to the code cell below.\n",
+    "Now that you are well on your way to building your own Python toolkit for text processing, let's stop for a second and explore one problem with the frequency function. Test the function `frequency_of()` on a few words where you only change capitalization, for example \"the\" and \"The\". What's the problem with the approach? Include the answer as comments to the code cell below.\n",
     "\n",
     "Python strings offer a method `lower` that might help us here. It works as follows:\n",
     "\n",
