--- a/lab1/class-assignment/lab1-class-part1.ipynb
+++ b/lab1/class-assignment/lab1-class-part1.ipynb
@@ -50,7 +50,7 @@
     "\n",
     "When you are done with your home assignment, you need to upload your work on the course Moodle site. What we want you to upload is _not_ your notebook, but a **Python program file** instead. You can download your notebook as a Python file by selecting _File -> Download as -> Python (.py)_. Again, store this file on the disk of your local computer. Then go to Moodle and upload this file.\n",
     "\n",
-    "**Your SECOND TASK** is to practise downloading your notebook as a Python program and upload it on Moodle. There is an assignment on the course Moodle site that is called _Harjoituspalautus ensimmäiselle ryhmälle (8.2.)_. Use that assignment to upload your Python program. The teachers will check that the file has the right format. Do this right away. Don't wait until the end of the lab session."
+    "**Your SECOND TASK** is to practise downloading your notebook as a Python program and upload it on Moodle. There is an assignment on the course Moodle site that is called _Harjoituspalautus toiselle ryhmälle (15.2.)_. Use that assignment to upload your Python program. The teachers will check that the file has the right format. Do this right away. Don't wait until the end of the lab session."
    ]
   }
  ],
