--- a/lab1/class-assignment/lab1-class-part2.ipynb
+++ b/lab1/class-assignment/lab1-class-part2.ipynb
@@ -362,7 +362,7 @@
     "    \n",
     "\"Conditional execution of actions\" sounds cumbersome and boring, though. Fortunately computer scientists have come up with a much cooler name for this concept: **Flow control**\n",
     "\n",
-    "Below you see a few lines of code illustrating basic flow control. Try to figure out what each part of the code does before reading on. You can also try changing the value of `'person_is_ex'` to `False`, or `person_name` to something else and see what happens. If you find this hard, don't worry; we'll deconstruct the code in a minute."
+    "Below you see a few lines of code illustrating basic flow control. Try to figure out what each part of the code does before reading on. You can also try changing the value of `'person_is_ex'` to `False`, or `person_name` to something else and see what happens. If you find this hard, don't worry; we'll deconstruct the code in the text below."
    ]
   },
   {
@@ -964,7 +964,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def starts_with(string1, string2):\n",
