--- a/lab2/class-assignment/lab2-class-part2.ipynb
+++ b/lab2/class-assignment/lab2-class-part2.ipynb
@@ -30,6 +30,91 @@
    "metadata": {},
    "source": [
     "---\n",
+    "## Section 2. Accessing word senses in WordNet\n",
+    "---\n",
+    "To use WordNet in Python we need to import it. The idiomatic way of doing this is abbreviating 'wordnet' to 'wn' using the `as`-command. This is done simply for convenience. We can now access the contents of WordNet by using dot-notation (`wn.some_function()`). Note that even though we are using the dot-notation, what we import here is *not* a WordNet object, but a module of functions, classes and so on."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.corpus import wordnet as wn"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this section we will only cover one small part of the WordNet module, the `Synset` class. This is enough for implementing the Lesk algorithm. In part 2 of this lab and in the home assignment we will go into more detail with WordNet.\n",
+    "\n",
+    "So what is the **Synset** (synonym set) class? As we mentioned in the previous section, classes are pre-defined data structures. `Synset` represents one specific sense or meaning, and contains the sense's definition, examples of the sense and and all the words (lemmas) that can have the sense. Let's go through a few examples to see `Synsets` in action.\n",
+    "\n",
+    "First of all, to get all the senses (Synsets) of a word, we can use the function `wn.synsets(word)`. The function returns a list of `Synset` objects for the word."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "synsets = wn.synsets(\"dog\")\n",
+    "print(synsets)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's pick the first synset from the list and see how we can access the definition and other things about it. The `name`-method returns the identifier of the sense. The method `definition` returns a string containing the definition of the sense, and the `examples`-method returns a list of example sentences illustrating its usage."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "all_synsets = wn.synsets(\"dog\") # wn.synsets returns a list on synsets\n",
+    "first_synset = all_synsets[0]   # first synset has index 0 \n",
+    "\n",
+    "print(first_synset.name())\n",
+    "print(first_synset.definition())\n",
+    "print(first_synset.examples())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "**Ex 2.1.** Write a `for`-loop that iterates through the Synsets returned by the `wn.synsets`-function for a word of your choice. For each sense, print out the name and the definition of the sense.\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Iterate through word senses here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
     "## Section 1: Synsets and lemmas\n",
     "---\n",
     "\n",
