Modified Part 1 a bit

--- a/lab2/class-assignment/lab2-class-part1.ipynb
+++ b/lab2/class-assignment/lab2-class-part1.ipynb
@@ -12,16 +12,18 @@
     "\n",
     "---\n",
     "\n",
-    "### Review\n",
+    "### Section 1.1. Review\n",
     "\n",
-    "In this section you can quickly review what we did in the last session. The section consists of example code and there are no exercises. Feel free to skip this if you are comfortable with strings, lists and sets. \n",
+    "In this section you can quickly review what we did in the last session. The section consists of example code that you can run. You don't have to modify any code in this section. Feel free to continue directly to Section 1.2 below if you are comfortable with strings, lists and sets. \n",
     "\n",
     "\n",
     "#### Strings and lists\n",
     "\n",
     "- Splitting strings to lists\n",
     "- Iteration through lists\n",
-    "- Calculating the length of a list"
+    "- Calculating the length of a list\n",
+    "\n",
+    "First, let's print a sentence as a string:"
    ]
   },
   {
@@ -36,34 +38,72 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "this is just another string\n",
-      "['this', 'is', 'just', 'another', 'string']\n",
-      "The sentence has 5 tokens.\n",
-      "this\n",
-      "is\n",
-      "just\n",
-      "another\n",
-      "string\n"
-     ]
-    }
-   ],
+   "source": [
+    "Next, let's split the sentence into a list. Each word in the sentence becomes an element in the list:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Split string on whitespace, the result is a list\n",
     "sentence_as_list = sentence_as_string.split()\n",
-    "print(sentence_as_list)\n",
-    "\n",
+    "print(sentence_as_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To know how many elements there are in a list, we use the _len_ function. We typically talk about the length of a list. The length is the number of elements in the list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# len-function returns the length of the list\n",
     "amt_tokens = len(sentence_as_list)\n",
-    "print(\"The sentence has\", amt_tokens, \"tokens.\")\n",
-    "\n",
+    "print(\"The sentence has\", amt_tokens, \"tokens.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can also determine the length of a string. How does this differ from the length of a list?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# len-function also returns something for the string. What does it return?\n",
+    "len_of_string = len(sentence_as_string)\n",
+    "print(\"The length of the sentence as a string is\", len_of_string)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using a _for_ loop we can iterate through a list, one element at a time. Here we go through our sentence as a list and print every word in the sentence, one by one:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Iterate through the list and print every element (token)\n",
     "for token in sentence_as_list:\n",
     "    print(token)"
@@ -73,9 +113,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We can also iterate through a string. How does this differ from iterating through a list?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Iterate through the string and print every element in the string. What are these elements, actually?\n",
+    "for c in sentence_as_string:\n",
+    "    print(c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Sets\n",
     "\n",
-    "- Set as a collection of unique elements"
+    "- Set as a collection of unique elements\n",
+    "\n",
+    "Let's look at the difference between lists and sets:"
    ]
   },
   {
@@ -89,15 +149,41 @@
     "\n",
     "# set-function takes in a list and returns a set\n",
     "types_in_sentence = set(tokens_in_sentence)\n",
-    "print(\"The set-function results in a:\", type(types_in_sentence), \"data structure.\")\n",
-    "\n",
-    "# Pay attention to how the outputs of the prints differ\n",
-    "print(tokens_in_sentence)\n",
-    "print(types_in_sentence)\n",
-    "\n",
-    "# len also works with sets\n",
+    "print(\"The set-function results in a:\", type(types_in_sentence), \"data structure.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pay attention to how the outputs of the prints differ:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Tokens in sentence:\", tokens_in_sentence)\n",
+    "print(\"Types in sentence:\", types_in_sentence)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Len also works with sets:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "amt_types = len(types_in_sentence)\n",
-    "print(\"The string has\", amt_types, \"types.\")\n"
+    "print(\"The string has\", amt_types, \"types.\")"
    ]
   },
   {
@@ -108,7 +194,9 @@
     "\n",
     "- function: input $\\rightarrow$ process $\\rightarrow$ output\n",
     "- if-else statement\n",
-    "- booleans"
+    "- booleans\n",
+    "\n",
+    "Make sure that you understand what goes on in the fun function below: "
    ]
   },
   {
@@ -212,7 +300,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
