--- a/lab2/class-assignment/lab2-class-part2.ipynb
+++ b/lab2/class-assignment/lab2-class-part2.ipynb
@@ -7,32 +7,19 @@
     "# Semantics and Pragmatics, KIK-LG103\n",
     "\n",
     "## Lab session 2, Part 2\n",
-    "### Semantics with WordNet\n",
     "\n",
     "---\n",
     "\n",
-    "In this second part of the lab we will dive deeper into the WordNet interface we used a little bit in the first part. We will explore the lexical relations we saw during the first lecture and homework and play around with the WordNet hierarchy. \n",
-    "\n",
-    "Let's first import WordNet as we did before."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from nltk.corpus import wordnet as wn"
+    "In this second part of the lab we will see how to use WordNet with Python. We will explore the lexical relations we saw during the first lecture and homework and play around with the WordNet hierarchy. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Section 2.1: Accessing word senses in WordNet\n",
     "---\n",
-    "## Section 2. Accessing word senses in WordNet\n",
-    "---\n",
-    "To use WordNet in Python we need to import it. The idiomatic way of doing this is abbreviating 'wordnet' to 'wn' using the `as`-command. This is done simply for convenience. We can now access the contents of WordNet by using dot-notation (`wn.some_function()`). Note that even though we are using the dot-notation, what we import here is *not* a WordNet object, but a module of functions, classes and so on."
+    "To use WordNet in Python we need to import it. The idiomatic way of doing this is abbreviating 'wordnet' to 'wn' using the `as`-command. This is done simply for convenience. We can now access the contents of WordNet by using dot-notation (`wn.some_function()`). Note that even though we are using the dot-notation, what we import here is *not* a `wordnet` object, but a module of functions, classes and so on."
    ]
   },
   {
@@ -48,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this section we will only cover one small part of the WordNet module, the `Synset` class. This is enough for implementing the Lesk algorithm. In part 2 of this lab and in the home assignment we will go into more detail with WordNet.\n",
+    "In this section we will cover a fundamental part of the `wordnet` module, the `Synset` class.\n",
     "\n",
     "So what is the **Synset** (synonym set) class? As we mentioned in the previous section, classes are pre-defined data structures. `Synset` represents one specific sense or meaning, and contains the sense's definition, examples of the sense and and all the words (lemmas) that can have the sense. Let's go through a few examples to see `Synsets` in action.\n",
     "\n",
@@ -82,7 +69,7 @@
    },
    "outputs": [],
    "source": [
-    "all_synsets = wn.synsets(\"dog\") # wn.synsets returns a list on synsets\n",
+    "all_synsets = wn.synsets(\"dog\") # wn.synsets returns a list of synsets\n",
     "first_synset = all_synsets[0]   # first synset has index 0 \n",
     "\n",
     "print(first_synset.name())\n",
@@ -96,7 +83,7 @@
    "source": [
     "---\n",
     "\n",
-    "**Ex 2.1.** Write a `for`-loop that iterates through the Synsets returned by the `wn.synsets`-function for a word of your choice. For each sense, print out the name and the definition of the sense.\n",
+    "**Ex 2.1.1** Write a `for`-loop that iterates through the Synsets returned by the `wn.synsets`-function for a word of your choice. For each sense, print out the name and the definition of the sense.\n",
     "\n",
     "---"
    ]
@@ -114,11 +101,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "## Section 1: Synsets and lemmas\n",
-    "---\n",
-    "\n",
-    "We already saw the `Synset` class in Part 1. A synset represents one sense that multiple words (lemmas) can have. We will now introduce a few new methods of the `Synset` class: `lemma_names` and `lemmas`. \n",
+    "We will now introduce two more methods of the `Synset` class: `lemma_names` and `lemmas`. \n",
     "\n",
     "The `lemma_names` method is straight-forward. It returns a list of strings containing the lemmas that have the sense. The `lemmas` method, however, returns a list of objects of `Lemma` class. The lemma objects are nothing but pairings of words and word senses (synsets). \n",
     "\n",
@@ -166,7 +149,7 @@
    "source": [
     "---\n",
     "\n",
-    "**Ex 1.1** Retrieve all the senses of the word *table*. How many senses does the word have? Explore some of the definitions and examples of the senses using the methods `definitions` and `examples`. Print out all the lemma names (method `lemma_names`) of a sense of your choice.\n",
+    "**Ex 2.1.2** Retrieve all the senses of the word *table*. How many senses does the word have? Explore some of the definitions and examples of the senses using the methods `definitions` and `examples`. Print out all the lemma names (method `lemma_names`) of a sense of your choice.\n",
     "\n",
     "---"
    ]
@@ -185,7 +168,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "## Section 2. Hyponyms and Hypernyms\n",
+    "### Section 2.2: Hyponyms and Hypernyms\n",
     "---\n",
     "\n",
     "As you might recall from the first lecture, the hypo-hypernym relation is one of sub- and superordinates. A word **A** is a hyponym of word **B** if **A** is a *subclass* of **B** (for example *mango* is a hyponym of *fruit*). Conversely, **B** is a hypernym of **A** if **B** *subsumes* **A** (for example *furniture* is a hypernym of *table*).\n",
@@ -219,7 +202,7 @@
     "\n",
     "---\n",
     "\n",
-    "**Ex 2.1.** Your task is to print out versions of the phrases where you have replaced each word with one of its hypernyms. We have supplied you with some code below. You should complete the following steps:\n",
+    "**Ex 2.2.1.** Your task is to print out versions of the phrases where you have replaced each word with one of its hypernyms. We have supplied you with some code below. You should complete the following steps:\n",
     "\n",
     "    1. Go through all the words in the phrase.\n",
     "    2. Retrieve the senses of the word (function: wn.synsets()) and pick the first synset\n",
@@ -267,7 +250,7 @@
    "source": [
     "---\n",
     "\n",
-    "## Section 3: Holonyms and Meronyms\n",
+    "## Section 2.3: Holonyms and Meronyms\n",
     "\n",
     "---\n",
     "\n",
@@ -283,11 +266,7 @@
     "|---|---|---|\n",
     "|part|sense.part_meronyms()|sense.part_holonyms()|\n",
     "|substance|sense.substance_meronyms()|sense.substance_holonyms()|\n",
-    "|member|sense.member_meronyms()|sense.member_holonyms()|\n",
-    "\n",
-    "---\n",
-    "\n",
-    "**Ex 3.1** **TODO**"
+    "|member|sense.member_meronyms()|sense.member_holonyms()|"
    ]
   },
   {
