--- a/lab2/class-assignment/lab2-class-part3.ipynb
+++ b/lab2/class-assignment/lab2-class-part3.ipynb
@@ -4,8 +4,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Semantics and Pragmatics, KIK-LG103\n",
+    "\n",
+    "## Lab session 2, Part 3\n",
+    "\n",
     "---\n",
-    "## Section 3: The Lesk algorithm\n",
+    "\n",
+    "Remember to import WordNet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.corpus import wordnet as wn"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Section 3.1: The Lesk algorithm\n",
     "---\n",
     "We now have all the necessary building blocks for the actual algorithm. Here is a pseudocode/plain text representation for running Simplified Lesk on a single word:\n",
     "\n",
@@ -26,7 +47,7 @@
     "\n",
     "---\n",
     "\n",
-    "**Ex 3.1** Let's implement the algorithm one step at a time. The numbers on the right hand side of the pseudocode mark the lines corresponding to each step of this exercise.\n",
+    "**Ex 3.1.1** Let's implement the algorithm one step at a time. The numbers on the right hand side of the pseudocode mark the lines corresponding to each step of this exercise.\n",
     "\n",
     "---\n",
     "\n",
@@ -48,14 +69,14 @@
     "\n",
     "You can now uncomment the `print`-statement on the final line of the code cell to check the correctness of you algorithm. The output of the cell should be:\n",
     "\n",
-    "    time time.v.05 adjust so that a force is applied and an action occurs at the desired time\n",
+    "    time.n.01 an instance or single occasion for some event\n",
     "    \n",
     "Feel free to play around with different target words and sentences by changing the variables `target` and `sentence`. How well does the algorithm work?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {
     "hide_input": false
    },
@@ -126,7 +147,114 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can now move on to Part 2 of this lab."
+    "###  Section 3.2: Lesk continued\n",
+    "\n",
+    "---\n",
+    "\n",
+    "This section contains more advanced material. You do not need to complete this section to understand the homework. Feel free to try out the exercises but don't worry if they seem very difficult.\n",
+    "\n",
+    "Above we have an implementation of the Lesk-algorithm, but it is realitively cumbersome to use. You can only disambiguate one word in one context at a time. Whenever you change the target and context, you lose the previous results. Let's wrap the algorithm into a nicer form so that we can use it in more interesting ways.\n",
+    "\n",
+    "\n",
+    "Probably the first thing we want to do is to wrap the code above into a single function. Let's call this function `disambiguate_word`. The function should take in a target word and the context words as arguments, and return the (correct) sense for the word. \n",
+    "\n",
+    "---\n",
+    "\n",
+    "**Ex 3.2.1**\n",
+    "\n",
+    "Wrap the implementation above into a function `disambiguate_word`. This should be relatively straight-forward. Copy everything except the `target`, `sentence`, and `context` variables into a function definition, and add a `return` statement where you return the best synset for the word.\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Disambiguation function\n",
+    "def disambiguate_word(target, context):\n",
+    "    # Function body here\n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that you have a nice function for disambiguating one word, it is easy to disambiguate for example all the words in a sentence. Initialize a variable containing a sentence as a list of strings and another variable that contains the set of words in the sentence. You can iterate through the sentence with a `for`-loop and disambiguate each word. Remember that the function returns a synset object so you can print out the disambiguated sense using `sense.name()` and `sense.definition()`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Try disambiguating whole sentences here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Certainly this is already much more convenient. You might already guess what the next step will be. We still need to manually define the context and write a `for`-loop for every sentence we want to disambiguate. Let's get rid of this nuisance.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "**Ex 3.2.2**\n",
+    "\n",
+    "Implement a function `disambiguate_sentence` that takes in a sentence as string as an argument and returns a list of synset object containing all the words disambiguated. Whatever you did in the code cell above, going through the sentence with a for-loop and so on, should be done inside the function. \n",
+    "\n",
+    "Because you want to return multiple synsets, you need to gather them somehow into a list. This can be done using the `append`-method of Python lists. You can initialize an empty list and append the best sense for each word like this:\n",
+    "\n",
+    "    sense_list = []\n",
+    "    \n",
+    "    # Let's assume 'context' and 'sentence' were defined somewhere\n",
+    "    for word in sentence:\n",
+    "        best_sense = disambiguate_word(word, context)\n",
+    "        sense_list.append(best_sense)\n",
+    "        \n",
+    "    . . .\n",
+    "\n",
+    "You can also simply print out the sense names/definitions if you don't want the function to return a list.\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def disambiguate_sentence(sentence):\n",
+    "    return []"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "**Ex 3.2.3**\n",
+    "\n",
+    "Finally, feel free to implement another version of the Lesk algorithm. The simplified version you implemented above only considers the words of the sentence as context. In one version of the algorithm, the context is taken to be the **WordNet entries** (definitions and examples) of the words in the sentence.\n",
+    "\n",
+    "In other words, you need to go through all the senses of all the words in the sentence, and gather the vocabulary from the definitions and examples of all theses senses into one set. This set is then used as a context for disambiguation.\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# New version here"
    ]
   }
  ],
