--- a/lab2/class-assignment/lab2-class-part1.ipynb
+++ b/lab2/class-assignment/lab2-class-part1.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "### Section 1.1. Review\n",
     "\n",
-    "In this section you can quickly review what we did in the last session. The section consists of example code that you can run. You don't have to modify any code in this section. Feel free to continue directly to Section 1.2 below if you are comfortable with strings, lists and sets. \n",
+    "In this section you can quickly review what we did in the last session. The section consists of example code that you can run (by pressing Ctrl-Enter inside the cell you want to run). You don't have to modify any code in this section. Feel free to continue directly to Section 1.2 below if you are comfortable with strings, lists and sets. \n",
     "\n",
     "\n",
     "#### Strings and lists\n",
