Rewrite section on methods and objects

--- a/lab2/class-assignment/lab2-class-part1.ipynb
+++ b/lab2/class-assignment/lab2-class-part1.ipynb
@@ -59,7 +59,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To know how many elements there are in a list, we use the _len_ function. We typically talk about the length of a list. The length is the number of elements in the list."
+    "To know how many elements there are in a list, we use the `len` function. We typically talk about the length of a list. The length is the number of elements in the list."
    ]
   },
   {
@@ -95,7 +95,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using a _for_ loop we can iterate through a list, one element at a time. Here we go through our sentence as a list and print every word in the sentence, one by one:"
+    "Using a `for` loop we can iterate through a list, one element at a time. Here we go through our sentence as a list and print every word in the sentence, one by one:"
    ]
   },
   {
@@ -196,7 +196,7 @@
     "- if-else statement\n",
     "- booleans\n",
     "\n",
-    "Make sure that you understand what goes on in the fun function below: "
+    "Make sure that you understand what goes on in the `fun` function below: "
    ]
   },
   {
@@ -224,9 +224,9 @@
    "metadata": {},
    "source": [
     "---\n",
-    "## Section 1.2: Objects and methods\n",
+    "## Section 1.2: Functions, methods, objects and classes\n",
     "---\n",
-    "In this section we offer a brief introduction to two new programming concepts, **objects** and **methods**. Objects and methods are fundamental in Python programming (or at least the style of programming we learn in this course), and in fact you have already worked with both of them. Let's start with a familiar example:"
+    "In this section we offer a brief introduction to three new programming concepts: **methods**, **objects** and **classes**. They are fundamental in Python programming (or at least the style of programming we learn on this course), and in fact you have already worked with all of them. Let's start with a familiar example:"
    ]
   },
   {
@@ -247,13 +247,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Whenever we assign a string to some variable, we actually create a *string object* with the specified character sequence as its contents. So what's the deal with the variable now containing an object instead of just a plain old string like we have been saying all the time? An object is simply an instantiation of some pre-defined arbitrary data structure. The definition of the structure is called a class. We won't have to define our own classes, but keep the term in mind. The class is in other words a template for creating objects of the type, and it specifies what is common between all its instantiations, leaving the details to the individual objects. For example, the definition of the string class includes something about the contents being a sequence of characters, but the specific sequence is decided only when we create a string object. \n",
+    "In the code cell above, we can see that the `split()` function is not called like the ordinary functions that we are used to seeing. An ordinary function would have a syntax more like `split(sentence)` rather than the _dot-notation_ in `sentence.split()`. The kind of function that `split()` represents is called a **method**. \n",
     "\n",
-    "As we saw in the code cell above, the `split()` is actually a method of the string. A method is a special kind of function tied to some specific class, and it is called with the dot-notation (`object.method()`). The distinction between methods and functions is subtle. You might think of functions as feeding your data to some process or machine and later gathering the result of the process for your use. In the case of methods, you tell the entity containing the data what you want of it, and the entity gives you the result. There is no reason in principle why you could not implement your own `split`-function that would take as an argument a string and return a list, and use that instead of the `split`-method.\n",
+    "The distinction between methods and functions is subtle. You might think of functions as feeding your data to some process or machine and later gathering the result of the process for your use. In the case of methods, you tell the entity containing the data what you want of it, and the entity gives you the result.\n",
     "\n",
-    "Fortunately, we have a great example of a task we can implement both as a function and a method. In the last lab session we implemented a function `ends_with(string1, string2)` that takes two arguments and returns a `boolean` indicating whether `string1` ends with `string2`. You can find the definition below. \n",
+    "In the case of `sentence.split()`, our sentence is an **object** of type _string_. Strings are a **class** of data structures that provide some specific functionality. For example, the definition of the string class includes something about the contents being a sequence of characters, and on sequences of characters some special actions can be performed, such as splitting a string into a list. Splitting can be seen as a _property_ that all strings have in common. In a way, when we type `sentence.split()` we tell our sentence to \"split itself\".\n",
     "\n",
-    "Implementing the `ends_with` function was a good illustration, but in fact unnecessary work. The Python string class already supplies a method `endswith()` that takes one string argument and returns a boolean indicating whether the string on which we are calling the method ends with the argument string."
+    "A class is an abstract data structure. An object is a real _instantiation_ of a class. In other words, we have the abstract group of strings, which we call the class of strings, but when we create a string for real, such as our sentence \"This is a sentence\", then we have created an object.\n",
+    "\n",
+    "We don't have to define our own classes on this course, but we could in principle define our own special string class, or a class of Finnish nominals, and we could implement our own methods for our classes, such as `split()` for strings or `partitive()` for Finnish nominals; for instance, we could type `print(my_word.partitive())` and that would produce the partitive-case form of whatever `my_word` happens to contain.\n",
+    "\n",
+    "In the last lab session we implemented a function `ends_with(string1, string2)` that takes two arguments and returns a `boolean` indicating whether `string1` ends with `string2`. You can find the definition below. \n",
+    "\n",
+    "Implementing the `ends_with` function was a good illustration, but in fact unnecessary work. The Python string class already supplies a method `endswith()` that takes one string argument and returns a boolean indicating whether the string on which we are calling the method ends with the argument string:"
    ]
   },
   {
@@ -265,22 +271,24 @@
    "outputs": [],
    "source": [
     "def ends_with(string1, string2):\n",
-    "    string_end = string1[-len(string2):]\n",
-    "    return string_end == string2\n",
+    "    string_end = string1[-len(string2):] # from the end of string1 take a substring that is as long as string2\n",
+    "    return string_end == string2         # is the end of string1 in fact equal to string2?\n",
     "\n",
     "# Here we use the function we defined above\n",
-    "print(ends_with(\"string\", \"ing\"))\n",
+    "print(\"The function returns:\", ends_with(\"string\", \"ing\"))\n",
     "\n",
-    "# Here we use the 'endswith' method Python strings supply\n",
+    "# Here we use the 'endswith' method that is already a built-in feature of Python strings\n",
     "s = \"string\"\n",
-    "print(s.endswith(\"ing\"))"
+    "print(\"The method returns:\", s.endswith(\"ing\"))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the rest of this lab we will use more complex classes and methods supplied by WordNet. Keep these ideas in mind as you work with the code."
+    "In the rest of this lab we will use more complex classes and methods supplied by _WordNet_. Keep these ideas in mind as you work with the code.\n",
+    "\n",
+    "Now you can continue to Part 2."
    ]
   }
  ],
